@@ -318,8 +318,10 @@ foreach ($modules as $module) {
 	  $data[2] .= '<a href="index.php?sec=gagente&amp;sec2=godmode/agentes/configurar_agente&amp;id_agente='.$id_agente.'&amp;tab=module&amp;id_agent_module='.$module["id_agente_modulo"].'&amp;edit_module='.$module["id_modulo"].'">' . html_print_image("images/config.png", true, array("alt" => '0', "border" => "")) . '</a>';
 	  
 	$data[3] = ui_print_string_substr ($module["nombre"], 30, true);
-	if ($module["extended_info"] != "") {
-		$data[3] .= ui_print_help_tip ($module["extended_info"], true, '/images/comments.png');
+	if (!empty($module["extended_info"])) {
+		if ($module["extended_info"] != "") {
+			$data[3] .= ui_print_help_tip ($module["extended_info"], true, '/images/comments.png');
+		}
 	}
 
 	//Adds tag context information
